# solana-pda

./: .gitignore  Anchor.toml  Cargo.toml  Makefile  README.md
cli/: Cargo.toml
cli/src/: balance.rs  config.rs  constants.rs  generate.rs  list.rs  main.rs  program_data.rs  send.rs  storage.rs
key/: pda_wallet-keypair.json
programs/pda_wallet/: Cargo.toml
programs/pda_wallet/src/: lib.rs
tests/: solana-custodial.ts
