[package]
name = "cli"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.42", features = ["derive"] }
sha2 = "0.10.9"
solana-client = "2.3.6"
solana-sdk = "2.3.1"
tokio = { version = "1.47.0", features = ["full"] }
borsh = { version = "1.5.7", features = ["derive"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.141"
